--- a/design/_design.scss
+++ b/design/_design.scss
@@ -165,7 +165,8 @@
     margin: 30px 0px;
     .glider {
         &::-webkit-scrollbar {
-            height: 0px;
+            height: 0px !important;
+            width: 0 !important;
         }
 
         .glider-item{
@@ -181,6 +182,7 @@
 
             img {
                 width: 100%;
+                height: 100%;
             }
         }
     }
